chore: updated typography doc example

--- a/src/stories/Typography.mdx
+++ b/src/stories/Typography.mdx
@@ -55,7 +55,7 @@ All values are available as CSS variables:
 
 ```css
 /* Use in your CSS */
-.my-heading {
+.test-heading {
   font-size: var(--text-4xl);
   font-weight: var(--font-weight-semibold);
 }
@@ -76,3 +76,4 @@ All values are available as CSS variables:
 <!-- Button -->
 <button class="button-text-medium">Click Me</button>
 ```
+
